[package]
name = "taskinator"
version = "0.3.0-alpha"
authors = ["Sam Kirby <sam.kirby94@hotmail.co.uk>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
futures = "0.3"
parking_lot = "0.11"
sysinfo = "0.16"
taskinator-communicator = { git = "https://github.com/sam-kirby/taskinator-communicator.git", branch = "main" }
tokio-stream = "0.1"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
twilight-cache-inmemory = "0.3"
twilight-command-parser = "0.3"
twilight-embed-builder = "0.3"
twilight-gateway = "0.3"
twilight-http = "^0.3.2"
twilight-mention = "0.3"
twilight-model = "0.3"
twilight-standby = "0.3"
twilight-util = "0.3"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "signal", "sync", "time"]
