[package]
name = "taskinator"
version = "0.3.2"
authors = ["Sam Kirby <sam.kirby94@hotmail.co.uk>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
futures = "0.3.15"
parking_lot = "0.11.1"
sysinfo = "0.18.2"
taskinator-communicator = { git = "https://github.com/sam-kirby/taskinator-communicator.git", branch = "main" }
tokio-stream = "0.1.6"
toml = "0.5.8"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
twilight-cache-inmemory = "0.5.0"
twilight-command-parser = "0.5.0"
twilight-embed-builder = "0.5.0"
twilight-gateway = "0.5.0"
twilight-http = "0.5.0"
twilight-mention = "0.5.0"
twilight-model = "0.5.0"
twilight-standby = "0.5.0"
twilight-util = "0.5.0"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.tokio]
version = "1.7.0"
features = ["rt-multi-thread", "macros", "signal", "sync", "time"]
